[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.27.0", features=["rt","rt-multi-thread", "time", "net", "macros", "sync", "signal"]}
anyhow = "1.0"
futures = "0.3"
serde = "1.0.160"
tarpc = { version = "0.33", features = ["tokio1", "serde-transport", "tcp", "serde-transport-json"] }
tokio-serde = "0.8.0"
rpc = { version = "0.1.0", path = "../rpc" }
